# thesis_multi_agent_financial_analysis

./: .dockerignore  .gitignore  Dockerfile  Lumo AI Financial Analyzer - Full Authentication Specification.md  README.md  TIP-004-UX_ RRI-UI Polish & Frontend Beautification.md  chainlit.md  compiled_docs.md  crawl_data.py  deployment_guide.md  directory_scan.md  docker-compose.yml  orchestration_flowchart.md  project_documentation_index.md  pyproject.toml  ragas_report.md  render.yaml  system_architecture_diagrams.md  system_flowcharts.md  task_graph.md  tech_stack.md  vercel.json
backend/: __init__.py  main.py
backend/agents/: coder.py  graph.py  retriever.py  router.py  state.py  synthesizer.py
backend/api/: auth.py  document.py  document_store.py  routes.py  schemas.py  (+2 more)
evaluation/: benchmark_report.csv  browser_evaluation_results.json  browser_evaluation_summary.csv  browser_evaluation_summary.md  coder_eval.py  coder_eval_report.md  coder_eval_results.csv  evaluation_results.csv  evaluation_results.xlsx  generate_browser_report.py  ocr_eval.py  ocr_eval_report.md  ocr_eval_results.csv  perf_benchmark.py  performance_benchmark_results.csv  performance_report.md  rag_comparison_report.md  rag_comparison_results.csv  rag_comparison_summary.csv  router_eval.py  router_eval_report.md  router_eval_results.csv  run_batch_eval.py  run_evaluation.py  test_dataset.json
frontend/: .dockerignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
public/: custom.css
reports/: TECH_STACK_REPORT.md  TIP-001_COMPLETION.md  TIP-002_COMPLETION.md  TIP-003_COMPLETION.md  TIP-004_COMPLETION.md  TIP-005_COMPLETION.md  TIP-006_COMPLETION.md  completion_report.md  directory_scan_report.md  metrics_summary.csv
scratch/: debug_coder.py  test_sandbox.py
scripts/: add_missing_cases.py  build_chromadb.py  build_graphdb.py  check_tess.py  cleanup_env.py  compile_docs.py  extract_pdf.py  fetch_vnm_documents.py  generate_test_cases.py  list_available_models.py  rebuild_chromadb.py  reorganize_and_clean.py  run_all_evaluations.py  scan_dir.py  test_chromadb.py  test_langsmith.py  test_qwen.py  test_router.py  validate_retrieval.py  verify_tip_002.py
src/: config.py  main.py
tests/: conftest.py  test_api_backend.py  test_auth.py  test_chromadb.py  test_coder.py  test_document.py  test_ocr_27.py  test_pipeline.py  test_router.py  test_sandbox_and_coder.py
thesis_financial_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
trace-dashboard/: app.js  index.html  style.css
(+122 files in other folders)
