[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-financial-analyzer"
version = "0.1.0"
description = "Hệ thống Multi-Agent phân tích Báo cáo tài chính"
authors = [
    { name = "User" }
]
requires-python = ">=3.10"
dependencies = [
    "ftfy>=6.2.0",
    "regex>=2024.5.15",
    "pytesseract>=0.3.10",
    "google-genai>=0.1.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "langchain-ollama>=0.1.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sse-starlette>=1.6.0",
    "python-multipart>=0.0.6",
    "redis>=4.5.0",
    "psycopg[binary]>=3.1.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-text-splitters>=0.2.0",
    "langchain-experimental>=0.0.50",
    "openai>=1.0.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-huggingface>=0.0.1",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "tabulate>=0.9.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "email-validator>=2.0.0"
]
# Ghi chú: docling được xem là thành phần optional/manual vì dung lượng dependencies Pytorch có thể > 2.5GB. Xin tự cài bằng tay `pip install docling`.

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "ragas",
    "datasets"
]

[tool.pytest.ini_options]
addopts = "-m 'not ragas'"
markers = [
    "ragas: test kịch bản RAGAS",
    "slow: test chạy chậm"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

